--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 
 	overflow-wrap: break-word;
+	background-color: #fafafa;
 }
 
 input, button, textarea {
@@ -31,10 +32,8 @@ img {
 }
 
 nav {
-	width: 100%;
-	height: 2rem;
-
-	background-color: gainsboro;
+    width: 100%;
+    margin-bottom: 16px;
 }
 
 main {
@@ -55,7 +54,6 @@ main > div {
 	padding: 1rem;
 	margin: 0 auto;
 
-	background-color: gainsboro;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -67,14 +65,15 @@ h1, h2, h3, h4, h5, h6 {
 /* ==================== */
 
 .panel {
-	display: grid;
-	grid-auto-flow: column;
-	grid-auto-rows: 2rem;
-
-	max-width: 48rem;
-	margin: 0 auto;
-
-	position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0px 0px 5px 0px #0000004a;
+    background-color: #dddddd;
+    position: relative;
 }
 
 .logo {
@@ -89,16 +88,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .button-strip icon {
-	font-size: 2rem;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: inherit;
 }
 
 .button-strip > label {
-	display: block;
-	cursor: pointer;
-	height: 100%;
-	font-size: 14px;
-	text-align: center;
-	line-height: 2rem;
+    cursor: pointer;
+    height: 100%;
+    font-size: 14px;
+    text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 .button-strip > label > div {
@@ -106,11 +109,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .button-strip > label > div + div {
-	background-color: #999;
-	vertical-align: bottom;
-	width: 2rem;
-	height: 2rem;
-	margin-left: .3rem;
+    background-color: #bababa;
+    vertical-align: bottom;
+    width: 24px;
+    height: 24px;
+    margin-left: .3rem;
+    border-radius: 8px;
 }
 
 /* ==================================== */
@@ -130,17 +134,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .auth-menu {
-	position: absolute;
-	top: 2rem;
-	right: 0px;
-
-	width: 24rem;
-
-	background-color: #999;
-	padding: 1rem;
-
-	line-height: unset;
-	z-index: 10;
+    position: absolute;
+    top: 100%;
+    right: 0px;
+    width: 24rem;
+    background-color: #c0c0c0f2;
+    padding: 1rem;
+    line-height: unset;
+    z-index: 10;
+    border-radius: 10px;
 }
 
 .auth-menu form {
@@ -174,17 +176,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .front > div {
-	background-color: #999;
+	background-color: #efefef;
 	padding: .5rem 1rem;
 	overflow: hidden;
 	position: relative;
 	cursor: pointer;
 
 	border-radius: 10px;
+
+/*	padding: 10px;*/
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.front > div:hover {
+    transform: translateY(-5px);
 }
 
 .front > div > .fade {
-	background: linear-gradient(180deg, #FFF0 20%, #999 80%);
+	background: linear-gradient(180deg, #FFF0 20%, #efefef 80%);
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -209,7 +221,7 @@ h1, h2, h3, h4, h5, h6 {
 /* ================== */
 
 .indeterminate-progress-bar {
-	background-color: #eee8d5;
+	background-color: #d7d7d7;
 
 	border-radius: 10px;
 
@@ -251,15 +263,19 @@ h1, h2, h3, h4, h5, h6 {
 /* ======== */
 
 .editor, .article {
-	display: grid;
-	grid-auto-columns: 100%;
-	grid-template-rows: auto auto 1fr;
-	gap: 1rem;
+    display: grid;
+    grid-auto-columns: 100%;
+    grid-template-rows: auto auto 1fr;
+    gap: 1rem;
+    background-color: #efefef;
+    padding: 8px 32px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 3px -1px #0000004a;
 }
 
 .editor textarea, .editor input[type="text"] {
 	background-color: inherit;
-	border: 3px dashed gray;
+	border: 3px dashed #9b9b9b;
 	outline: none;
 }
 
@@ -280,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .editor textarea:focus, .editor input[type="text"]:focus {
-	border: 3px dashed orangered;
+	border: 3px dashed #268bd2;
 }
 
 /* ================= */
@@ -302,16 +318,16 @@ h1, h2, h3, h4, h5, h6 {
 /* =============================== */
 
 .controls {
-	border: 3px dashed orange;
-	display: grid;
-
-	grid-auto-flow: column;
-	padding: .5rem;
-	min-height: 3rem;
+    border-bottom: 3px solid gray;
+    display: grid;
+    grid-auto-flow: column;
+    padding: 16px 0;
+    min-height: 3rem;
 }
 
 .controls .label {
 	place-self: center start;
+	font-size: 20px;
 }
 
 .controls .elems {
@@ -329,14 +345,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .controls button {
-	display: inline;
-
-	background: none;
-	color: inherit;
-
-	border: none;
-	padding: 0rem .5rem;
-	cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    border-radius: 50px;
+    border: 1px solid #8d8d8d;
+    padding: 3px 12px;
+    margin-right: 10px;
+    cursor: pointer;
 }
 
 .controls button icon {
