--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,10 @@ h1, h2, h3, h4, h5, h6 {
 	.controls .elems {
 		place-self: center center;
 	}
+
+	.editor, .article {
+    	padding: 8px 16px;
+    }
 }
 
 .controls button {
