--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,9 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     top: 100%;
     right: 0px;
-    width: 24rem;
     background-color: #c0c0c0f2;
     padding: 1rem;
+    padding-right: 5rem;
     line-height: unset;
     z-index: 10;
     border-radius: 10px;
@@ -172,6 +172,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 32.333rem) {
 	.front {
 		grid-template-columns: 1fr;
+		grid-auto-rows: 10rem;
 	}
 }
 
